--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,51 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.glow {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle at 30% 30%, /* Posición del destello */
+    rgba(255, 255, 255, 0.8), /* Color de la luz en el centro */
+    rgba(255, 255, 255, 0) 60% /* Degradado hacia afuera */
+  );
+  box-shadow: inset 0px 0px 10px 1px whitesmoke;
+}
+
+.semaphore {
+  background-color: #333;
+  border-radius: 80px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 140px;
+  height: 380px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.traffic-light-circle {
+  font-size: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* color: rgba(255, 255, 255, 0.8); */
+  color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.semaphore__icon--adjusted {
+  margin-top: -8px;
+}
+
+.my-custom-text {
+  font-size: 55px;
+}
+  
